# backend/api/catalog.py
@@ -2,14 +2,14 @@ from fastapi import APIRouter, Header, Body, Query
 from typing import Dict, Any, Annotated, List
 
 from settings import MainConfig
-from validation.supplier import addProductModels, myProductsListModels
+from validation.catalog import getCatalogModels, getCatalogItemDetailsModels, searchModels
 
 from libs.database import Catalog
 from libs.database import ProductAdditionalImages
 
 from libs.tokens import Tokens
 
-from api.serializers import myProductsListSerializer
+from api.serializers import getCatalogItemDetailsSerializer, getCatalogSerializer, searchSerializer
 
 from exceptions.basic_exception import BasicException
 
@@ -18,31 +18,51 @@ router = APIRouter(
     tags=["supplier"]
 )
 
+# It not works. Why?
+'''
 @router.get("/getCatalogItemDetails", tags = ["catalog"], status_code=200)
 async def getCatalogItemDetails(
-        request_header: Annotated[myProductsListModels.RequestHeaderModel, Header()],
-        request_query: Annotated[myProductsListModels.RequestQueryModel, Query()],
-    ) -> List[myProductsListModels.ResponceSchemaItem]:
-
-    decoded_auth_info = await Tokens.decode_acess_token(
-        request_header.Authorization
-    )
-
-    if not decoded_auth_info.type == "supplier" and\
-          not decoded_auth_info.isSupplierStatusConfirmed:
-        raise BasicException(
-            code=400,
-            description="You're not supplier or your supplier status is unconfirmed"
-        )
+        request_query: Annotated[getCatalogItemDetailsModels.RequestModel, Query()],
+    ) -> getCatalogItemDetailsModels.ResponceSchema:
     
     API = await Catalog.start()
-    productArr = await API.get_my_products(
-        userId=decoded_auth_info.id,
+    res = await API.get_product_by_id(
+        id=request_query.id
+    )
+
+    serializer = await getCatalogItemDetailsSerializer.start()
+    return await serializer.serialize(res)
+'''
+
+@router.get("/getCatalog", tags = ["catalog"], status_code=200)
+async def getCatalogItemDetails(
+        request_query: Annotated[getCatalogModels.RequestQueryModel, Query()],
+    ) -> List[getCatalogModels.ResponceSchemaItem]:
+
+    API = await Catalog.start()
+    productArr = await API.get_products(
         start=request_query.start,
         count=request_query.count,
         sort=request_query.sort
     )
 
-    serializer = await myProductsListSerializer.start()
+    serializer = await getCatalogSerializer.start()
+    print([await serializer.serializeItem(elem) for elem in productArr])
+    return [await serializer.serializeItem(elem) for elem in productArr]
+
+@router.get("/search", tags = ["catalog"], status_code=200)
+async def search(
+        request_query: Annotated[searchModels.RequestQueryModel, Query()],
+    ) -> List[getCatalogModels.ResponceSchemaItem]:
+
+    API = await Catalog.start()
+    productArr = await API.search_in_title(
+        phrase=request_query.request,
+        start=request_query.start,
+        count=request_query.count,
+        sort=request_query.sort
+    )
+
+    serializer = await searchSerializer.start()
     print([await serializer.serializeItem(elem) for elem in productArr])
     return [await serializer.serializeItem(elem) for elem in productArr]
